Registration and Login apis

--- a/POC_API/appsettings.json
+++ b/POC_API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "Poc_api": "Data Source=DESKTOP-PUSLP4O;Initial Catalog=POC;Integrated Security=true"
+  },
   "AllowedHosts": "*"
 }
