changes in excel upload

--- a/POC_API/appsettings.json
+++ b/POC_API/appsettings.json
@@ -6,8 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    //"Poc_api": "Data Source=DESKTOP-PUSLP4O;Initial Catalog=POC;Integrated Security=true",
-    "Poc_api": "Data Source=KUSHAL\\SQLEXPRESS01;Initial Catalog=POC;Trusted_Connection=True;TrustServerCertificate=True;"
+    "Poc_api": "Data Source=DESKTOP-PUSLP4O;Initial Catalog=POC;Trusted_Connection=True;TrustServerCertificate=True;"
+    //"Poc_api": "Data Source=KUSHAL\\SQLEXPRESS01;Initial Catalog=POC;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "AllowedHosts": "*"
 }
