--- a/POC_API/appsettings.json
+++ b/POC_API/appsettings.json
@@ -9,5 +9,9 @@
     "Poc_api": "Data Source=DESKTOP-PUSLP4O;Initial Catalog=POC;Trusted_Connection=True;TrustServerCertificate=True;"
     //"Poc_api": "Data Source=KUSHAL\\SQLEXPRESS01;Initial Catalog=POC;Trusted_Connection=True;TrustServerCertificate=True;"
   },
+  "SmsKey": {
+    "ApiKey": "KEY018EDF5AD92F09666CCB334A8420AE07_yR0HLP0dEJLn4AHQsLG159"
+    //"Poc_api": "Data Source=KUSHAL\\SQLEXPRESS01;Initial Catalog=POC;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "AllowedHosts": "*"
 }
