--- a/POC_API/POC_API.csproj
+++ b/POC_API/POC_API.csproj
@@ -22,6 +22,7 @@
     </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
+    <PackageReference Include="Telnyx.net" Version="2.9.0" />
   </ItemGroup>
 
 </Project>
